<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Register.PersonalInfo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/infoHeader"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoSub"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/amka"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/amkaHint"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/ageHint"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/btnRegister"/>

        <!--    <ImageView-->
        <!--        android:layout_width="30dp"-->
        <!--        android:layout_height="30dp"-->
        <!--        android:src="@drawable/ic_arrow_left"-->
        <!--        android:layout_above="@id/swipeLeft"-->
        <!--        android:layout_centerHorizontal="true"/>-->

        <!--    <TextView-->
        <!--        android:id="@+id/swipeLeft"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/swipe_right_for_login"-->
        <!--        android:textSize="15sp"-->
        <!--        android:fontFamily="@font/roboto_regular"-->
        <!--        android:layout_centerHorizontal="true"-->
        <!--        android:layout_alignParentBottom="true"-->
        <!--        android:layout_marginBottom="20dp"/>-->

    </RelativeLayout>

</LinearLayout>